2000-10-03  Lauris Kaplinski  <lauris@helixcode.com>

	* src/nodepath.c (update_repr): Call sp_document_done ()

	* src/dialogs/desktop-properties.*: Use new dialog layout

	* glade/desktop.glade: Use new dialog layout

	* src/sp-guide.*: "color" and "hicolor" attributes

	* src/sp-namedview.*: Bunch of new attributes

	* src/desktop-events.c (sp_dt_guide_event): Use guide colors
	(sp_dt_ruler_event): Use guide colors

2000-10-02  Lauris Kaplinski  <lauris@helixcode.com>

	* src/knot.c (sp_knot_set_flag): Implement different outlines
	(sp_knot_update_ctrl): New function to set SPCtrl colors

	* src/nodepath.*: Mostly rewritten

	* src/node-context.*: Use new SPNodePath

2000-09-30  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* configure.in ALL_LINGUAS: Add Japanese 'ja'

2000-09-21  Pablo Saratxaga <pablo@mandrakesoft.com>
	
	* configure.in: ALL_LINGUAS: added 'ca' for Catalan translation.

2000-09-18  Lauris Kaplinski  <lauris@helixcode.com>

	* src/dialogs/object-properties.*: New combined fill + stroke +
	transformation dialog by Frank Felfe

	* glade/*.xpm: Lots of new icons etc. by Frank Felfe

	* src/desktop.*, interface.c, select-context.c, seltrans.c: Changes

	* selection-chemistry.* (sp_selection_apply_affine): New function by
	Frank Felfe
	(sp_selection_remove_transforms): Same

2000-09-17  Lauris Kaplinski  <lauris@helixcode.com>

	* src/draw-context.c (sp_draw_context_root_handler): Handle Ctrl
	and fix an missing segment, while continuing Ctrl-aligned line.

	* src/ellipse-context.c (sp_ellipse_read-attr): Use sodipodi namespace
	for "start", "end". Replace "closed" with "open", so closed is default

	* src/sp-ellipse_context.c: Ditto

	* src/sp-object.c: #define SP_OBJECT_CLONED_FLAG

	* src/sp-root.c (sp_root_read_attr): Tru to read "viewBox" attribute.
	The implementation is hackish, but it works, until document size is fixed

	* src/display/canvas-shape.c (sp_canvas_shape_update): Calculate correct
	line thickness
